<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignIn"
    tools:layout_editor_absoluteY="73dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textDateMissing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/missing_date"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/textDateInput"
            app:layout_constraintTop_toBottomOf="@+id/textDateInput" />

        <TextView
            android:id="@+id/textNameMissing"
            android:layout_width="137dp"
            android:layout_height="31dp"
            android:layout_marginTop="24dp"
            android:text="@string/missing_name"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/textNameInput"
            app:layout_constraintTop_toBottomOf="@+id/textNameInput" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="347dp"
            android:layout_height="74dp"
            android:layout_marginTop="8dp"
            android:contentDescription="TODO"
            app:layout_constraintEnd_toEndOf="@+id/textNameInput"
            app:layout_constraintHorizontal_bias="0.553"
            app:layout_constraintStart_toStartOf="@+id/textNameInput"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/textNameInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.552"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/textDateInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/enter_date"
            android:inputType="date"
            android:longClickable="false"
            app:layout_constraintEnd_toEndOf="@+id/textNameInput"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textNameInput"
            app:layout_constraintTop_toBottomOf="@+id/textNameInput" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textDateInput"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textDateInput"
            app:layout_constraintTop_toBottomOf="@+id/textDateInput">

            <Button
                android:id="@+id/buttonVk"
                android:layout_width="47dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="onClickVK"
                android:text="@string/vk_but_text"

                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickContinue"
                android:text="@string/cont_but_text"
                android:textSize="24sp" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
