...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/b11"
            android:layout_width="47dp"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="onClickHoroscope"
            android:text="@string/horoscope_but_text"
...
